--- a/.github/workflows/send-emails.yml
+++ b/.github/workflows/send-emails.yml
@@ -1,10 +1,10 @@
 name: "[EMAIL_MARKETING] Send all needed emails" 
 
 on:
-  schedule:
+  # schedule:
     # https://crontab.guru/every-2-minutes
     # Esse cron roda a cada 1 hora
-    - cron: "0 * * * *"
+    # - cron: "0 * * * *"
     # Esse cron roda a 2 cada minutos
     # - cron: "*/2 * * * *"
   push:
